@@ -1,5 +1,10 @@
 2007-05-15  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/gameswf_styles.cpp: SWF 8 and later supports up to 15 gradient control points
+	* docs/AUTHORS: misc updates
+
+2007-05-15  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* gameswf/gameswf_test_ogl.cpp:	removed warning at the start
 	* gameswf/gameswf_text.cpp:	fixed edit_text bug for Flash 8
 
